[gd_scene load_steps=7 format=3 uid="uid://dj838715r5a5h"]

[ext_resource type="FontFile" uid="uid://cvs2kj5ouuwty" path="res://UI/Fonts/toxigenesis.rg-bold.otf" id="1_5u6jt"]
[ext_resource type="Script" path="res://UI/LevelSelect/level_select.gd" id="1_b0fhx"]
[ext_resource type="PackedScene" uid="uid://c7b7w3kk3hs66" path="res://UI/background.tscn" id="2_0grt6"]
[ext_resource type="Theme" uid="uid://dhq1th0sqj2u7" path="res://UI/Fonts/Text_font.tres" id="2_hkpcn"]
[ext_resource type="Script" path="res://UI/focusUI.gd" id="3_was6a"]

[sub_resource type="LabelSettings" id="LabelSettings_rv70p"]
font = ExtResource("1_5u6jt")
font_size = 70
font_color = Color(0.0196078, 0.290196, 0.568627, 1)
outline_size = 30
outline_color = Color(0.243137, 0.486275, 0.694118, 1)
shadow_size = 20
shadow_color = Color(0, 0, 0, 0.992157)
shadow_offset = Vector2(5, 7)

[node name="LevelSelect" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_b0fhx")

[node name="Background" parent="." instance=ExtResource("2_0grt6")]
layout_mode = 1

[node name="Error" type="Label" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -126.5
offset_top = -108.0
offset_right = 126.5
offset_bottom = -65.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("2_hkpcn")

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -253.0
offset_top = 50.0
offset_right = 253.0
offset_bottom = 135.0
grow_horizontal = 2
text = "Select a level"
label_settings = SubResource("LabelSettings_rv70p")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -450.0
offset_top = -56.0
offset_right = 450.0
offset_bottom = 56.0
grow_horizontal = 2
grow_vertical = 2

[node name="BoxContainer" type="BoxContainer" parent="MarginContainer"]
layout_mode = 2
theme = ExtResource("2_hkpcn")
alignment = 1

[node name="lvl1" type="Button" parent="MarginContainer/BoxContainer"]
layout_mode = 2
text = "Level 1"
script = ExtResource("3_was6a")

[node name="lvl2" type="Button" parent="MarginContainer/BoxContainer"]
layout_mode = 2
text = "Level 2"

[node name="lvl3" type="Button" parent="MarginContainer/BoxContainer"]
layout_mode = 2
text = "Level 3
"

[node name="Back" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -52.0
offset_top = -148.0
offset_right = 52.0
offset_bottom = -97.0
grow_horizontal = 2
grow_vertical = 0
size_flags_vertical = 4
theme = ExtResource("2_hkpcn")
text = "Back
"
script = ExtResource("3_was6a")

[connection signal="pressed" from="MarginContainer/BoxContainer/lvl1" to="." method="_on_lvl_1_pressed"]
[connection signal="pressed" from="MarginContainer/BoxContainer/lvl2" to="." method="_on_lvl_2_pressed"]
[connection signal="pressed" from="MarginContainer/BoxContainer/lvl3" to="." method="_on_lvl_3_pressed"]
[connection signal="pressed" from="Back" to="." method="_on_back_pressed"]
